--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <html lang="en">
 <head>
 <meta charset="UTF-8">
@@ -8,20 +8,28 @@
 <body>
 
 <div id="cash">💵 $<span id="cashAmount">0</span></div>
+<button id="musicBtn" onclick="toggleMusic()">🔊 Music</button>
+
+<h1>🕺 Z’s Club 🎶</h1>
+
+<div id="playerBox">
+  👤 <span id="playerName"></span> 
+  <small>(ID: <span id="playerId"></span>)</small>
+  <button onclick="changeName()">✏️</button>
+  <button onclick="exportSave()">💾 Export</button>
+  <input type="file" id="importFile" onchange="importSave(event)">
+</div>
 
 <audio id="clubMusic" loop>
   <source src="music/club.mp3" type="audio/mpeg">
 </audio>
-<button id="musicBtn" onclick="toggleMusic()">🔊 Music</button>
-
-<h1>🕺 Z’s Club 🎶</h1>
 
 <div class="club">
 
 <section>
 <h2>🎴 Blackjack</h2>
-<input type="number" id="bet" placeholder="Bet amount">
-<p id="bjStatus">Place bet & deal</p>
+<input type="number" id="bet" placeholder="Bet">
+<p id="bjStatus">Place bet</p>
 <button onclick="deal()">Deal</button>
 <button onclick="hit()">Hit</button>
 <button onclick="stand()">Stand</button>
@@ -35,21 +43,21 @@
 </section>
 
 <section>
-<h2>🎰 Slot Machine</h2>
+<h2>🎰 Slots</h2>
 <div id="slots">🍒 🍋 🔔</div>
 <button onclick="spinSlots()">Spin (250)</button>
 <p id="slotResult"></p>
 </section>
 
 <section>
-<h2>🎁 Daily Reward</h2>
+<h2>🎁 Daily</h2>
 <button onclick="claimDaily()">Claim</button>
 <p id="dailyStatus"></p>
 </section>
 
 <section>
-<h2>🔑 Redeem Code</h2>
-<input type="text" id="codeInput" placeholder="Enter code">
+<h2>🔑 Codes</h2>
+<input id="codeInput" placeholder="Code">
 <button onclick="redeemCode()">Redeem</button>
 <p id="codeStatus"></p>
 </section>
@@ -61,11 +69,13 @@
 
 <section>
 <h2>🛒 Shop</h2>
-<button onclick="buyBooster(1)">Luck Booster 1:00 (1000)</button>
-<button onclick="buyBooster(5)">Luck Booster 5:00 (5000)</button>
+<button onclick="buyBooster(1)">Luck x2 (1 min)</button>
+<button onclick="buyBooster(5)">Luck x2 (5 min)</button>
 <p id="boosterStatus"></p>
 </section>
 
 </div>
 
-<script src="script.js
+<script src="script.js"></script>
+</body>
+</html>
